Fix CORS configuration: add CorsFilter and update settings for frontend access